--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,9 +12,35 @@
 
 .charts{
   padding-top: 5%;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   display: flex;
-  flex: 1 1 0;
+  justify-content: space-around;
   flex-direction: row;
+}
+
+.charts__gold{
+  width: 100%;
+  border-left: 5px solid gold;
+  /* border-right: 1px solid white; */
+}
+
+.charts__silver{
+  width: 100%;
+  border-right: 5px solid silver;
+  /* border-left: 1px solid white; */
+}
+
+@media only screen and (max-width: 600px) {
+  .charts__gold{
+    width: 100%;
+    border-left: 1px solid gold;
+    /* border-right: 1px solid white; */
+  }
+  
+  .charts__silver{
+    width: 100%;
+    border-right: 1px solid silver;
+    /* border-left: 1px solid white; */
+  }
 }
