--- a/src/styles/championsChart.css
+++ b/src/styles/championsChart.css
@@ -4,7 +4,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid white;
+  /* border: 1px solid white; */
+  border-bottom: none;
   border-top: none;
   /* background: rgb(251,192,63);
   background: radial-gradient(circle, rgba(251,192,63,1) 0%, rgba(144,110,64,1) 91%, rgba(0,0,0,1) 100%); */
@@ -37,9 +38,20 @@
 }
 
 .chart_tittle--description span{
-  /* width: 100%; */
-  /* background-color: white; */
   color: white;
+}
+
+.svg-inline--fa { /*Este habria que capturarlo con js*/
+  color:gold;
+}
+
+.teams{
+  display: flex;
+  flex-direction: column;
+  padding-top: 5%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
 @media only screen and (max-width: 600px) {
