--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   height: 100%;
   width: 100%;
+  padding-bottom: 5%;
 }
 
 .header{
@@ -12,6 +13,7 @@
 
 .charts{
   padding-top: 5%;
+  min-height: 100%;
   height: 100%;
   width: 100%;
   display: flex;
@@ -20,27 +22,36 @@
 }
 
 .charts__gold{
+  height: 100%;
   width: 100%;
   border-left: 5px solid gold;
-  /* border-right: 1px solid white; */
 }
 
 .charts__silver{
+  height: 100%;
   width: 100%;
   border-right: 5px solid silver;
-  /* border-left: 1px solid white; */
+}
+
+.footer{
+  margin-top: auto;
+  padding-bottom: 0%;
+  height: 40px;
 }
 
 @media only screen and (max-width: 600px) {
+  .charts{
+    border-left: 1px solid gold;
+    border-right: 1px solid silver;
+  }
+
   .charts__gold{
     width: 100%;
     border-left: 1px solid gold;
-    /* border-right: 1px solid white; */
   }
   
   .charts__silver{
     width: 100%;
     border-right: 1px solid silver;
-    /* border-left: 1px solid white; */
   }
 }
