--- a/src/styles/championsChart.css
+++ b/src/styles/championsChart.css
@@ -1,5 +1,6 @@
 .chart {
   height: 100%;
+  min-height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -45,6 +46,21 @@
   color:gold;
 }
 
+.teams__loading {
+  margin-top: 10%;
+  display: flex;
+  animation: rotation 2s infinite linear;
+}
+
+@keyframes rotation {
+  from {
+      -webkit-transform: rotate(0deg);
+  }
+  to {
+      -webkit-transform: rotate(359deg);
+  }
+}
+
 .teams{
   display: flex;
   flex-direction: column;
@@ -52,6 +68,7 @@
   width: 100%;
   align-items: center;
   justify-content: center;
+  transition: 1s;
 }
 
 @media only screen and (max-width: 600px) {
