--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -15,22 +15,24 @@
   padding-top: 5%;
   min-height: 100%;
   height: 100%;
-  width: 100%;
+  width: 99%;
   display: flex;
   justify-content: space-around;
   flex-direction: row;
+  border-left: 5px solid gold;
+  border-right: 5px solid silver;
 }
 
 .charts__gold{
   height: 100%;
   width: 100%;
-  border-left: 5px solid gold;
+  /* border-left: 5px solid gold; */
 }
 
 .charts__silver{
   height: 100%;
   width: 100%;
-  border-right: 5px solid silver;
+  /* border-right: 5px solid silver; */
 }
 
 .footer{
@@ -41,17 +43,9 @@
 
 @media only screen and (max-width: 600px) {
   .charts{
+    width: 100%;
+    height: 100%;
     border-left: 1px solid gold;
     border-right: 1px solid silver;
-  }
-
-  .charts__gold{
-    width: 100%;
-    border-left: 1px solid gold;
-  }
-  
-  .charts__silver{
-    width: 100%;
-    border-right: 1px solid silver;
-  }
+  } 
 }
